# MOO_interp

./: .gitignore  README.md  add_fileio.py  conftest.py  fix_builtins.py  fix_objnum_literal.py  pyproject.toml  requirements.txt  test_catch_list.py
moo_interp/: builtin_functions.py  builtin_functions.py.bak  debugger.py  errors.py  list.py  map.py  moo_ast.py  moo_types.py  opcodes.py  parser.lark  parser.lark.backup  parser.py  string.py  to_python_ast.py  vm.py  vm.py.backup  waif.py
moo_interp/debugger/: __init__.py  base.py  breakpoints.py  builtin_trace.py  call_trace.py  conditions.py  variable_watch.py
reports/: iteration-log.md
reports/iterations/001/: analysis.md  end.json  start.json
reports/iterations/002/: analysis.md
reports/iterations/003/: analysis.md  end.json  start.json
reports/iterations/004/: analysis.md
reports/iterations/005/: analysis.md  start.json
reports/iterations/006/: analysis.md  start.json
reports/iterations/007/: analysis.md  end.json  start.json  verification.json
scripts/: toast_arithmetic_differential.py  toast_builtin_inventory.py
tests/: test_arithmetic_opcodes.py  test_bitwise_opcodes.py  test_builtins.py  test_bytecode.py  test_comparison_logical_opcodes.py  test_compiler.py  test_dollar.py  test_exceptions.py  test_list_ops.py  test_loops.py  test_nested_indexed_assignment.py  test_optim_num.py  test_parser_acceptance.py  test_property_ops.py  test_real_moo_code.py  test_scatter.py  test_splicer.py  test_string_escaping.py  test_to_python_ast.py  test_try_expr.py  test_types.py  test_verb_calls.py  test_vm.py
(+28 files in other folders)
