[project]
name = "moo-interp"
version = "0.1.0"
description = "MOO language interpreter"
authors = [{name = "Christopher Toth", email = "q.alpha@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "attrs>=23.1.0",
    "lark>=1.1.5",
    "lambdamoo-db",
    "passlib>=1.7.4",
    "bcrypt>=4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.3.1",
    "hypothesis>=6.76.0",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "CRITICAL"
log_cli_format = "%(message)s"

[tool.uv.sources]
lambdamoo-db = { git = "https://github.com/ctoth/lambdamoo-db-py.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["moo_interp"]
